// Generated by funapi_initiator
// This file is an example to illustrate how to use protobuf
// client-server messages on Funapi.
// You can edit this file to meet your taste.


// You should use a relative path to the system top-level directory.
// On Linux, it's /usr/include.
// To import /usr/include/funapi/network/fun_messages.proto,
// use relative path like this:
import "funapi/network/fun_message.proto";


message UserState {
  required int32 user_id = 1;
  required float a_v = 2;
  required float a_h = 3;
  required float p_x = 4;
  required float p_z = 5;
  required float r_y = 6;
  required float r_w = 7;
  optional bool jump = 8;
}


message InputUpdate {
  required float a_v = 1;
  required float a_h = 2;
  required float p_x = 3;
  required float p_z = 4;
  required float r_y = 5;
  required float r_w = 6;
  optional bool jump = 7;
}


message Spawn {
  required int32 user_id = 1;
  required float a_v = 2;
  required float a_h = 3;
  required float p_x = 4;
  required float p_z = 5;
  required float r_y = 6;
  required float r_w = 7;
}


//extend FunMessage {
//}
